@@ -1,5 +1,13 @@
 2014-04-21  Jon TURNEY  <jon.turney@dronecode.org.uk>
 
+	* minidumper.cc (filter_minidump_type): New function.
+	(minidump): Change default dump type from MiniDumpNormal to
+	something with more useful information without getting too
+	big. Use filter_minidump_type() to filter out unsupported dump
+	types.
+
+2014-04-21  Jon TURNEY  <jon.turney@dronecode.org.uk>
+
 	* Makefile.in (minidumper.exe): Link directly with dbghelp.
 	* minidumper.cc (minidump): Ditto.
 
